Resolve all threads
Fix write method
Add more detailed unit testing for nbs file reading/writing